# northstar

./: README.md  RUNBOOK.md
.github/workflows/: tests.yml
app/: Dockerfile  README.md  app.yaml  pyproject.toml
app/k8s/: cronjob-nightly.yaml
app/src/: __init__.py  cli.py  config.py
app/src/data/: cache.py  fetch.py  universe.py
app/src/features/: multiples.py  quality.py  technicals.py
app/src/jobs/: nightly.py  refresh_intraday.py
app/src/models/: __init__.py  valuation.py
app/src/notify/: telegram.py
app/src/picks/: __init__.py  selector.py
app/src/pytest/: __init__.py
app/src/ranking/: __init__.py  scorer.py
app/src/storage/: db.py  schema.sql
app/src/utils/: rates.py
app/tests/: test_technicals.py
app/tests/data/: synthetic_prices.csv  test_cache.py
app/tests/features/: test_technicals.py
scripts/: backtest.py
tests/: conftest.py  test_dcf.py  test_selector.py
tests/data/: test_cache.py  test_universe.py
tests/features/: test_technicals.py
